--- a/extensions/theme-extension/blocks/banner.liquid
+++ b/extensions/theme-extension/blocks/banner.liquid
@@ -249,6 +249,9 @@
 {
   "name": "Banner",
   "target": "section",
+  "disabled_on": {
+    "groups": ["header", "footer"]
+  },
   "settings": [
     {
       "type": "header",
