--- a/extensions/theme-extension/blocks/cookie-bar.liquid
+++ b/extensions/theme-extension/blocks/cookie-bar.liquid
@@ -67,7 +67,7 @@
 {% schema %}
   {
     "name": "Cookie bar",
-    "target": "section",
+    "target": "body",
     "settings": [
       {
         "type": "select",
