--- a/extensions/theme-extension/blocks/grid-images.liquid
+++ b/extensions/theme-extension/blocks/grid-images.liquid
@@ -715,6 +715,9 @@
     {
       "name": "Grid images",
       "target": "section",
+      "disabled_on": {
+        "groups": ["header", "footer"]
+      },
       "settings": [
         {
           "type": "select",
